src/objects/Record_Log_Event__e.object
<CustomObject>
    <description>A Platform Event that will trigger a Record Log to be created.</description>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Record_Id__c</fullName>
        <description>The Id to which this log entry is related</description>
        <label>Related Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Record Log Event</label>
    <pluralLabel>Record Log Events</pluralLabel>
</CustomObject>